# shem

./: .env.example  .gitignore  Cargo.toml  INTROSPECT_TESTING_SUMMARY.md  LICENSE  Makefile  Makefile copy  QUICK_START_TESTING.md  README.md  README2.md  docker-compose.yml  shem.toml
crates/cli/: Cargo.toml
crates/cli/schema/: schema.sql
crates/cli/src/: cli_util.rs  config.rs  lib.rs  main.rs
crates/cli/src/commands/: README.md  diff.rs  init.rs  inspect.rs  introspect.rs  migrate.rs  mod.rs  validate.rs
crates/cli/tests/: README.md  diff.rs  generator.rs  init.rs  inspect.rs  integration_introspect_tests.rs  integration_tests.rs  migrate.rs  mod.rs  run_tests.sh  validate.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/fixtures/: mod.rs
crates/cli/tests/introspect/: collations.rs  domains.rs  event_triggers.rs  extensions.rs  functions.rs  integration.rs  materialized_views.rs  mod.rs  policies.rs  procedures.rs  rules.rs  sequences.rs  tables.rs  triggers.rs  types.rs  views.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  errors.rs  lib.rs  migration.rs  schema.rs  shared_types.rs  traits.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: ast.rs  ast_new.rs  ast_old.rs  lib.rs  visitor.rs
crates/parser/tests/: parser_basic.rs  parser_comprehensive.rs
crates/postgres/: Cargo.toml  README.md
crates/postgres/src/: db_util.rs  introspection.rs  lib.rs  sql_generator.rs
crates/postgres/src/commands/: introspect.rs
crates/postgres/tests/: README.md  generator.rs  sql_generator.rs  sql_generator_legacy.rs
crates/postgres/tests/introspection/: array_types.rs  base_types.rs  collations.rs  composite_types.rs  domains.rs  enums.rs  event_triggers.rs  extensions.rs  foreign_key_constraints.rs  foreign_tables.rs  functions.rs  materialized_views.rs  mod.rs  multirange_types.rs  policies.rs  procedures.rs  publications.rs  range_types.rs  roles.rs  rules.rs  schemas.rs  sequences.rs  tables.rs  tablespaces.rs  triggers.rs  views.rs
crates/postgres/tests/sql_generator/: collation.rs  extensions.rs  functions.rs  indexes.rs  misc.rs  mod.rs  policies.rs  publications.rs  roles.rs  sequences.rs  tables.rs  tablespaces.rs  triggers.rs  types.rs  views.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: constraints.rs  data_types.rs  expressions.rs  functions.rs  lib.rs  policies.rs  triggers.rs
schema/: schema.sql
scripts/: test-introspect.sh
test/: all.sql  all_seed.sql  tables.sql  test_introspection.sql
tests/: README.md  introspect.rs
tests/introspect/: fixtures.rs  helpers.rs  mod.rs  test_cases.rs
