[package]
name = "cli"
version = "0.1.0"
edition = "2024"
description = "Declarative database schema management CLI"
authors = ["Jonathan Vargas <jonathanvargas1104@gmail.com>"]
license = "MIT"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "shem"
path = "src/main.rs"

[dependencies]
# Workspace crates
shem-core = { path = "../core" }
postgres = { path = "../postgres" }
parser = { path = "../parser" }
shared-types = { path = "../shared-types" }

# External dependencies
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
base64 = "0.21"
uuid = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
# Testing dependencies
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
sqlx = { workspace = true }
