[package]
name = "shem-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for database schema management"
authors = ["Jonathan Vargas <jonathanvargas1104@gmail.com>"]
license = "MIT"

[dependencies]
chrono = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }