[package]
name = "shem-core"
version = "0.1.0"
edition = "2024"
description = "Core types and traits for database schema management"
authors = ["Jonathan Vargas <jvargas@allient.io>"]
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
postgres-types = "0.2"
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = "1.0"
shared-types = { path = "../shared-types" }
