[package]
name = "shem-parser"
version = "0.1.0"
edition = "2024"
description = "SQL parser for database schema management"
authors = ["Jonathan Vargas <jvargas@allient.io>"]
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
pg_query = { workspace = true }
shem-shared-types = { path = "../shared-types" }

[features]
default = ["full"]
full = ["postgres"]
postgres = []  # Enable PostgreSQL-specific parsing features

