[package]
name = "shem-postgres"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL driver for database schema management"

[dependencies]
sqlx = { workspace = true }
shem-core = { path = "../core" }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
uuid = { version = "1.7", features = ["v4", "serde"] }