[package]
name = "shem-postgres"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL driver for database schema management"

[dependencies]
sqlx = { workspace = true }
shem-core = { path = "../core" }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
uuid = { workspace = true }
